tests/typing/bad/testfile-redef-10.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void *malloc(int n) {}
int main() {}
